# for display continuity sake please use 2 spaces instead of tabs

2013-05-10 ede
  * move 'Combine Layers' to Layer main menu
  * resorted main menus Edit and Layer for better overview

2013-05-10 mmichaud <michael.michaud@free.fr>
  * upgrading Cadplan JumpPrinter to version 1.86 (PLUS version)

2013-04-28 mmichaud <michael.michaud@free.fr>
  * improve usability of SearchAllAttributesPlugIn : make it possible to switch
    between select and add to selection with the shift key and zoom to selected
    features.
  * FR 3610851 : add moveto tool in the attribute panel
  
2013-04-27 mmichaud <michael.michaud@free.fr>
  * try to fix 3611503 in FillPolygonTool
  
* release 1.6.2 ***************************************************************

2013-04-23 mmichaud <michael.michaud@free.fr>
  * set the appropriate srid to the layer after AddDatastoreLayerPlugin
  
2013-04-21 mmichaud <michael.michaud@free.fr>
  * fix a bug in MergeSelectedFeatures preventing the merge of MultiGeometries

2013-04-21 mmichaud <michael.michaud@free.fr>
  * fix bug 3611412 happening after a MergeSelectedFeatures operation and caused
    by a bad usage of dispose method in UndoableCommand
  * fix a NullPointerException in ExtractLayersByAttribute

2013-04-20 mmichaud <michael.michaud@free.fr>
  * Fix a bug reported by Uwe and preventing project containing WMSLayers to be 
    displayed correctly.
  * Fix a bug throwing an exception when RefreshDataStoreQueryPlugIn is applied 
    to a in-memory layer

2013-04-19 mmichaud <michael.michaud@free.fr>
  * Change directory from lib/ext/etc to lib/native for MrSID executable
    see https://sourceforge.net/apps/mediawiki/jump-pilot/index.php?title=MrSID
  
2013-04-18 mmichaud <michael.michaud@free.fr>
  * Fix bug appeared with recent jre (between 1.7.0_07 and 1.7.0_17) and 
    preventing error messages to be displayed (reported by Uwe on 2013-04-15)

2013-04-15 mmichaud <michael.michaud@free.fr>