@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2013-05-11 ede
+  * carefully reordered main menu View
+  * zoomPrevious/NextPlugIn have shortcuts Ctrl+Shift+Y/Z now
+
 2013-05-10 ede
   * move 'Combine Layers' to Layer main menu
   * resorted main menus Edit and Layer for better overview
